feat: WordPress設定の更新と新規ファイルの追加
- deployment_config.jsonにRDSエンドポイントを追加し、WordPressのURLを更新
- 新たにVARIABLES_ANALYSIS.mdを作成し、プロジェクトで使用される変数を詳細に分析
- WordPress用のApache設定ファイルを新規作成し、HTTPSリダイレクトやセキュリティヘッダーを設定
- Ansibleの設定ファイルを更新し、データベース接続情報を統一
- PHP設定を強化し、アップロード制限を増加させるための新しいテンプレートを追加

--- a/.github/workflows/ansible-environment-test.yml
+++ b/.github/workflows/ansible-environment-test.yml
@@ -201,9 +201,9 @@ jobs:
         run: |
           echo "Testing database connection..."
           ansible wordpress -i inventory/hosts.yml -m mysql_query -a "
-              login_host={{ wordpress_db_host }}
-              login_user={{ wordpress_db_user }}
-              login_password={{ wordpress_db_password }}
+              login_host={{ rds_host }}
+              login_user={{ wp_db_user }}
+              login_password={{ wp_db_password }}
               query='SELECT 1'
           " --extra-vars "@group_vars/wordpress.yml"
           echo "✓ Database connection test completed"
