--- a/deployment_config.json
+++ b/deployment_config.json
@@ -4,7 +4,8 @@
         "ec2_public_ip": "54.64.49.220",
         "nat_instance_ip": "54.64.109.28",
         "rds_identifier": "wp-shamo-rds",
-        "wordpress_url": "http://shamonooyuuhan.com",
+        "rds_endpoint": "wp-shamo-rds.cjg0emy2snss.ap-northeast-1.rds.amazonaws.com:3306",
+        "wordpress_url": "https://shamolife.com",
         "db_password": "breadhouse",
         "backup_retention_days": 7
     },
@@ -13,6 +14,7 @@
         "ec2_public_ip": "203.0.113.20",
         "nat_instance_ip": "203.0.113.21",
         "rds_identifier": "wp-shamo-rds-validation",
+        "rds_endpoint": "wp-shamo-rds-validation.cjg0emy2snss.ap-northeast-1.rds.amazonaws.com:3306",
         "wordpress_url": "http://validation-ip",
         "db_password": "test_validation_password",
         "test_timeout_minutes": 30
