--- a/wordpress_fixed.conf
+++ b/wordpress_fixed.conf
@@ -3,38 +3,28 @@
 
 # 1. メインサイト HTTP → HTTPS リダイレクト
 <VirtualHost *:80>
-    ServerName {{ wordpress_domain | default('example.com') }}
-    Redirect permanent / https://{{ wordpress_domain | default('example.com') }}/
+    ServerName shamolife.com
+    Redirect permanent / https://shamolife.com/
 </VirtualHost>
 
 # 2. 管理画面 HTTP → HTTPS リダイレクト
 <VirtualHost *:80>
-    ServerName admin.{{ wordpress_domain | default('example.com') }}
-    Redirect permanent / https://admin.{{ wordpress_domain | default('example.com') }}/
+    ServerName admin.shamolife.com
+    Redirect permanent / https://admin.shamolife.com/
 </VirtualHost>
 
-# 3. 管理画面 HTTPS
+# 3. 管理画面 HTTPS（より具体的なドメインを先に定義）
 <VirtualHost *:443>
-    ServerName admin.{{ wordpress_domain | default('example.com') }}
+    ServerName admin.shamolife.com
     DocumentRoot /var/www/html
     SSLEngine on
-    SSLCertificateFile /etc/letsencrypt/live/{{ wordpress_domain | default('example.com') }}/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/live/{{ wordpress_domain | default('example.com') }}/privkey.pem
+    SSLCertificateFile /etc/letsencrypt/live/shamolife.com/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/shamolife.com/privkey.pem
 
-    # クライアントリクエストサイズ制限（管理画面は大きめに設定）
-    LimitRequestBody 67108864
+    # クライアントリクエストサイズ制限（管理画面はより大きな制限）
+    LimitRequestBody 5368709120
     LimitRequestFieldSize 16384
     LimitRequestLine 8190
-
-    # mod_security アップロードサイズ制限緩和（管理画面用）
-    <IfModule mod_security2.c>
-        SecRuleEngine On
-        SecRequestBodyAccess On
-        SecRequestBodyLimit 67108864         # 64MB
-        SecRequestBodyNoFilesLimit 67108864
-        SecRequestBodyInMemoryLimit 131072
-        SecRequestBodyLimitAction ProcessPartial
-    </IfModule>
 
     # PHP-FPM設定
     <FilesMatch \.php$>
@@ -52,23 +42,14 @@
     RewriteCond %{REQUEST_URI} ^/$
     RewriteRule ^/?$ /wp-admin/ [R=302,L]
 
+    # 管理画面ディレクトリへのアクセスを許可
     <Directory "/var/www/html/wp-admin">
-        <If "%{HTTP_HOST} == 'admin.{{ wordpress_domain | default('example.com') }}'">
-            Require all granted
-        </If>
-        <If "%{HTTP_HOST} != 'admin.{{ wordpress_domain | default('example.com') }}'">
-            Require all denied
-        </If>
+        Require all granted
     </Directory>
 
-    # 管理画面専用サブドメインではログインページへのアクセスを許可
+    # ログインページへのアクセスを許可
     <Location /wp-login.php>
-        <If "%{HTTP_HOST} == 'admin.{{ wordpress_domain | default('example.com') }}'">
-            Require all granted
-        </If>
-        <If "%{HTTP_HOST} != 'admin.{{ wordpress_domain | default('example.com') }}'">
-            Require all denied
-        </If>
+        Require all granted
     </Location>
 
     # セキュリティヘッダー
@@ -87,28 +68,18 @@
     CustomLog logs/wordpress_admin_access.log combined
 </VirtualHost>
 
-# 4. 公開サイト HTTPS
+# 4. 公開サイト HTTPS（デフォルト）
 <VirtualHost *:443>
-    ServerName {{ wordpress_domain | default('example.com') }}
+    ServerName shamolife.com
     DocumentRoot /var/www/html
     SSLEngine on
-    SSLCertificateFile /etc/letsencrypt/live/{{ wordpress_domain | default('example.com') }}/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/live/{{ wordpress_domain | default('example.com') }}/privkey.pem
+    SSLCertificateFile /etc/letsencrypt/live/shamolife.com/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/shamolife.com/privkey.pem
 
-    # クライアントリクエストサイズ制限（公開側は64MB程度に制限）
-    LimitRequestBody 67108864
+    # クライアントリクエストサイズ制限
+    LimitRequestBody 5368709120
     LimitRequestFieldSize 16384
     LimitRequestLine 8190
-
-    # mod_security アップロードサイズ制限緩和（公開サイト用）
-    <IfModule mod_security2.c>
-        SecRuleEngine On
-        SecRequestBodyAccess On
-        SecRequestBodyLimit 67108864         # 64MB
-        SecRequestBodyNoFilesLimit 67108864
-        SecRequestBodyInMemoryLimit 131072
-        SecRequestBodyLimitAction ProcessPartial
-    </IfModule>
 
     # PHP-FPM設定
     <FilesMatch \.php$>
