--- a/ansible/environments/production.yml
+++ b/ansible/environments/production.yml
@@ -4,10 +4,10 @@ environment: production
 debug_mode: false
 
 # データベース設定
-wordpress_db_host: "{{ lookup('env', 'WORDPRESS_DB_HOST') | default('localhost') }}"
-wordpress_db_name: wordpress
-wordpress_db_user: wordpress
-wordpress_db_password: "{{ lookup('env', 'WORDPRESS_DB_PASSWORD') | default('password') }}"
+wp_db_host: "{{ lookup('env', 'WORDPRESS_DB_HOST') | default('localhost') }}"
+wp_db_name: wordpress
+wp_db_user: wordpress
+wp_db_password: "{{ lookup('env', 'WORDPRESS_DB_PASSWORD') | default('password') }}"
 
 # セキュリティ設定
 wordpress_debug: false
